[workspace]
resolver = "2"

members = [
	"rush-core",
	"rush-cli",
	"rush-sdk",
	"rush-parser",
	"rush-visor",
	"rush-svm",
	"rush-svm/programs/rush-proxy",
	"rush-svm/programs/rush-store",
]

exclude = [
	# "rush-svm/programs/rush-proxy",
	# "rush-svm/programs/rush-store",

	# this is excluded with the empty [workspace] table
	# in its Cargo.toml, but good to have for metadata
	# and visibility
	"rush-svm/programs/rush-integration-test",
	"rush-sdk/examples/*"
]
