[workspace]
resolver = "2"

members = [
	"rush-core",
	"rush-cli",
	"rush-sdk",
	"rush-parser",
	"rush-visor",
	"rush-svm",
	"rush-svm/programs/rush-proxy",
	"rush-svm/programs/rush-store",
	"rush-sdk/examples/bevy-farm-game",
	"rush-sdk/examples/bevy-apple-game",
	"rush-sdk/examples/bevy-platformer-game"
]

exclude = [
]
