[workspace]
members = [
	"cli",
	"ecs/core",
	"ecs/sdk",
	"ecs/parser",
	"ecs/svm",
	"ecs/keystore",
	"ecs/manifest",
]

exclude = [
	"ecs/svm/programs/rush-proxy",
	"ecs/svm/programs/rush-store",
]

resolver = "2"

[workspace.package]
version = "0.2.4"
authors = ["Sonic Engineering <engineering@sonic.game>"]
repository = "https://github.com/mirrorworld-universe/rush"
homepage = "https://www.sonic.game/"
license = "Apache-2.0"
edition = "2021"
keywords = ["rush", "ecs", "sonic", "gamedev", "cli"]

[workspace.dependencies]
anyhow = "1.0.90"
arrayref = "0.3.8"
async-trait = "0.1.82"
assert_matches = "1.5.0"
borsh = { version = "1.5.1", features = ["derive"] }
clap = "4.5.16"
colored = "2.1.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
toml = "0.8.19"

shank = "0.4.2"
solana-program = "=2.0.13"
solana-program-test = "=2.0.13"
solana-sdk = "=2.0.13"
solana-client = "=2.0.13"
spl-discriminator = "0.3.0"
spl-program-error = "0.5.0"

rush-cli = { version = "0.2.4", path = "cli" }
rush-ecs-core = { version = "0.2.4", path = "ecs/core" }
rush-ecs-manifest = { version = "0.2.4", path = "ecs/manifest" }
rush-ecs-parser = { version = "0.2.4", path = "ecs/parser" }
rush-ecs-svm = { version = "0.2.4", path = "ecs/svm" }
rush-ecs-sdk = { version = "0.2.4", path = "ecs/sdk" }
