[package]
name = "rush-cli"
version = "0.1.0"
edition = "2021"

[features]
# Default features:
# - Toml (Parser)
# - Bevy (Game Engine)
# - Solana (Blockchain)

# Parser Support
# yaml = []

# Game Engine Support
# unity = []
# godot = []
# pygame = []

# Blockchain Support
# evm = []
# near = []

[dependencies]
anyhow = "1.0.86"
clap = "4.5.16"
rush-core = { version = "0.1.0", path = "../rush-core" }
rush-parser = { version = "0.1.0", path = "../rush-parser" }
thiserror = "1.0.63"

[[bin]]
name = "rush"
path = "src/main.rs"
