[package]
name = "rush-cli"
version = "0.1.0"
edition = "2021"
authors = ["Sonic Engineering"]
description = "Rush ECS Framework CLI tool"
homepage = "https://sonic.game/"
repository = "https://github.com/mirrorworld-universe/rush"
license = "MIT"
keywords = ["rush", "sonic", "solana", "gamedev", "ecs", "web3", "blockchain"]

[features]
# Default features:
# - Toml (Parser)
# - Bevy (Game Engine)
# - Solana (Blockchain)

# Parser Support
# yaml = []

# Game Engine Support
# unity = []
# godot = []
# pygame = []

# Blockchain Support
# evm = []
# near = []

[dependencies]
anyhow = "1.0.86"
clap = "4.5.16"
colored = "2.1.0"
rush-core = { version = "0.1.0", path = "../rush-core" }
rush-manifest = { version = "0.1.0", path = "../rush-manifest" }
rush-parser = { version = "0.1.0", path = "../rush-parser" }
rush-sdk = { version = "0.1.0", path = "../rush-sdk" }
thiserror = "1.0.63"
tokio = "1.41.0"
toml = "0.8.19"

[[bin]]
name = "rush"
path = "src/main.rs"
