[package]
name = "rush-ecs-cli"
version = "0.1.0"
edition = "2021"
authors = ["Sonic Engineering"]
description = "Rush ECS Framework CLI tool"
homepage = "https://sonic.game/"
repository = "https://github.com/mirrorworld-universe/rush"
license = "Apache-2.0"
keywords = ["rush", "sonic", "solana", "gamedev", "ecs", "web3", "blockchain"]

[features]
# Default features:
# - Toml (Parser)
# - Bevy (Game Engine)
# - Solana (Blockchain)

# Parser Support
# yaml = []

# Game Engine Support
# unity = []
# godot = []
# pygame = []

# Blockchain Support
# evm = []
# near = []

[dependencies]
anyhow = "1.0.86"
clap = "4.5.16"
colored = "2.1.0"
rush-ecs-core = { version = "0.1.0", path = "../rush-ecs-core" }
rush-ecs-manifest = { version = "0.1.0", path = "../rush-ecs-manifest" }
rush-ecs-parser = { version = "0.1.0", path = "../rush-ecs-parser" }
rush-ecs-sdk = { version = "0.1.0", path = "../rush-ecs-sdk" }
thiserror = "1.0.63"
tokio = "1.41.0"
toml = "0.8.19"

[[bin]]
name = "rush"
path = "src/main.rs"
