[package]
name = "rush-ecs-core"
version = "0.1.0"
edition = "2021"
authors = ["Sonic Engineering"]
description = "Rush ECS Framework Core"
homepage = "https://sonic.game/"
repository = "https://github.com/mirrorworld-universe/rush"
license = "Apache-2.0"
keywords = ["rush", "sonic", "solana", "gamedev", "ecs"]

[features]

[dependencies]
anyhow = "1.0.87"
borsh = { version = "1.5.1", features = ["derive"] }
thiserror = "1.0.63"

[target.'cfg(not(target_os = "solana"))'.dependencies]
comfy-table = "7.1.1"

[target.'cfg(target_os = "solana")'.dependencies]
