[package]
name = "rush-ecs-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Sonic Engineering"]
description = "Rush ECS Framework SDK"
homepage = "https://sonic.game/"
repository = "https://github.com/mirrorworld-universe/rush"
license = "Apache-2.0"
keywords = ["rush", "sonic", "solana", "gamedev", "ecs"]

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1.82"
borsh = "1.5.1"
colored = "2.1.0"
rush-ecs-core = { version = "0.1.0", path = "../rush-ecs-core" }
rush-ecs-parser = { version = "0.1.0", path = "../rush-ecs-parser" }
rush-ecs-svm = { version = "0.1.0", path = "../rush-ecs-svm" }
thiserror = "1.0.63"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=2.0.13"
solana-sdk = "=2.0.13"
solana-client = "=2.0.13"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }

# Ensure unsupported crates from solana_sdk/solana_client don't get
# imported into program specific code
[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "=2.0.13"
solana-client = "=2.0.13"
