[package]
name = "rush-manifest"
version = "0.1.0"
edition = "2021"
authors = ["Sonic Engineering"]
description = "Rush ECS Framework Manifest Standard"
homepage = "https://sonic.game/"
repository = "https://github.com/mirrorworld-universe/rush"
license = "Apache-2.0"
keywords = ["rush", "sonic", "solana", "gamedev", "ecs"]

[dependencies]
anyhow = "1.0.90"
thiserror = "1.0.64"
toml = "0.8.19"
