[package]
name = "rush-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1.82"
rush-core = { version = "0.1.0", path = "../rush-core" }
rush-parser = { version = "0.1.0", path = "../rush-parser" }
solana-sdk = "=2.0.5"
thiserror = "1.0.63"
tokio = "1.40.0"

[[example]]
name = "bevy-apple-game"
path = "examples/bevy-apple-game/src/main.rs"

[[example]]
name = "bevy-farm-game"
path = "examples/bevy-farm-game/src/main.rs"

[[example]]
name = "bevy-platformer-game"
path = "examples/bevy-platformer-game/src/main.rs"

[dev-dependencies]
solana-program-test = "=2.0.5"
solana-sdk = "=2.0.5"
