[package]
name = "rush-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1.82"
borsh = "1.5.1"
rush-core = { version = "0.1.0", path = "../rush-core" }
rush-parser = { version = "0.1.0", path = "../rush-parser" }
rush-svm = { version = "0.1.0", path = "../rush-svm" }
thiserror = "1.0.63"
tokio = "1.40.0"

[[example]]
name = "bevy-apple-game"
path = "examples/bevy-apple-game/src/main.rs"

[[example]]
name = "bevy-farm-game"
path = "examples/bevy-farm-game/src/main.rs"

[[example]]
name = "bevy-demo-game"
path = "examples/bevy-demo-game/src/main.rs"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=2.0.13"
solana-sdk = "=2.0.13"
solana-client = "=2.0.13"

# Ensure unsupported crates from solana_sdk/solana_client don't get
# imported into program specific code
[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "=2.0.13"
solana-client = "=2.0.13"
