[package]
name = "rush-ecs-core"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }


[features]

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
comfy-table = "7.1.1"

[target.'cfg(target_os = "solana")'.dependencies]
