[package]
name = "rush-ecs-manifest"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
