[package]
name = "rush-ecs-svm"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }

[dependencies]
arrayref = { workspace = true }
borsh = { workspace = true }
# we'll enable when we start optimizations
# bytemuck = "1.17.1"
num-derive = { workspace = true }
num-traits = { workspace = true }
rush-ecs-core = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
spl-discriminator = { workspace = true }
# we'll enable when we start optimizations
# spl-pod = "0.4.0"
spl-program-error = { workspace = true }
thiserror = { workspace = true }

# Ensure unsupported crates from solana_sdk don't get
# imported into program specific code
[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "=2.0.13"
