[package]
name = "rush-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name="rush_proxy"
crate-type = ["cdylib", "rlib"]

[features]
test-sbf = []

[dependencies]
arrayref = "0.3.8"
bytemuck = "1.17.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
shank = "0.4.2"
solana-program = "=2.0.5"
spl-discriminator = "0.3.0"
spl-pod = "0.4.0"
spl-program-error = "0.5.0"
thiserror = "1.0.63"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=2.0.5"
solana-sdk = "=2.0.5"
spl-discriminator = "0.3.0"

[workspace] # to exclude in virtual manifest
