[package]
name = "rush-store"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
solana-program = "=2.0.5"
tokio = "1.39.2"

[dev-dependencies]
solana-program-test = "=2.0.5"
solana-sdk = "=2.0.5"

[lib]
name="rush_store"
crate-type = ["cdylib", "rlib"]
doctest = false

[workspace] # to exclude in virtual manifest
